--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-demo-2025",
+  "name": "demo-2025-electron",
   "version": "1.0.0",
   "description": "An Electron application with React",
   "main": "./out/main/index.js",
